<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_weight="20"
                android:src="@drawable/article"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
            />

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="80"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvArticle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:text="@string/article_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/tvDescription"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/description_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />
                <TextView
                    android:id="@+id/tvPrice"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:text="@string/unit_price_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>